--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,11 +65,12 @@ body {
 .btn {
     border: none;
     border-radius: 2.5rem;
+    cursor: pointer;
     font-size: 1.5rem;
     font-weight: 400;
     font-family: 'Lexend Deca', Arial, Helvetica, sans-serif;
     outline: none;
-    padding: 1.1rem 3.1rem;
+    padding: 1.2rem 3.1rem;
     transition: all .2s ease-in;
 }
 
@@ -97,4 +99,19 @@ body {
     
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+@media screen and (min-width:768px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        max-width: 920px;
+        margin: 0 5rem 5rem;
+    }
+    .car-text {
+        margin-bottom: 8.5rem;
+    }
+    .btn {
+        white-space: nowrap;
+    }
 }
